fixed background position to stretch

--- a/main.css
+++ b/main.css
@@ -27,6 +27,7 @@ body {
   background-repeat: no-repeat;
   /* background-position: right top;
   */
+  background-size: auto;
   background-attachment: fixed;
 	/* background-image: url("psmi.png");
 	background-repeat: no-repeat;
